[B]Please utilize Twilight Tips (Tools->Tips for Twilight Use) to catch up on any important new features. New features will be highlighted with a [COLOR chartreuse]NEW!!![/COLOR] label.[/B]

[COLOR dodgerblue][B]Version 3.2.61[/B][/COLOR]
- Switch to custom Twilight Trakt API app for authorization.
- Switch to custom TMDb API Key.
- Translate Movies/TV Shows --> Genres to Hebrew + Fix TV Shows "Talk" genre label.

[COLOR dodgerblue][B]Version 3.2.60[/B][/COLOR]
- HSM - Remove Subscene website :(

[COLOR dodgerblue][B]Version 3.2.59[/B][/COLOR]
- Accounts Manager - Add brief explanation for each account.
- source_utils.py seas_ep_filter - Improve Anime Movies/TV Shows sources matching (CoCoScrapers Torrentio Provider - NyaaSi).
- Remove MoviesOnlineDates automatic search when no Movie results are found.

[COLOR dodgerblue][B]Version 3.2.58[/B][/COLOR]
- Set default timeout for requests (10s).

[COLOR dodgerblue][B]Version 3.2.57[/B][/COLOR]
- Ktuvit: Add website's title mismatch dictionary mapping.

[COLOR dodgerblue][B]Version 3.2.56[/B][/COLOR]
- Hebrew Subtitles Matching - complete rewrite of Subscene code: Bug fixes, speed improvement, and proper langauge filter (whitelist instead of blacklist).
- Foreign languages titles context menu subtitles search bug fix. (movies/episodes.py --> english_title or original_title)

[COLOR dodgerblue][B]Version 3.2.55[/B][/COLOR]
- Change default minimum HSM sync percentage value to 70.

[COLOR dodgerblue][B]Version 3.2.54[/B][/COLOR]
- Wizdom search code bug fix.

[COLOR dodgerblue][B]Version 3.2.53[/B][/COLOR]
- Small Ktuvit code improvement.

[COLOR dodgerblue][B]Version 3.2.52[/B][/COLOR]
- [B]Tikipeter's FINAL version 3.2.29[/B]:
- Added Kodi version check to startup services.
- Fix incorrect episode size estimates on certain results.

[COLOR dodgerblue][B]Version 3.2.51[/B][/COLOR]
- Small Ktuvit code bug fix.

[COLOR dodgerblue][B]Version 3.2.50[/B][/COLOR]
- Added support for "Next Episode" skin button (EpisodeTools).